Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -190,8 +190,7 @@
     "# You code here \n",
     "\n",
     "def ks_plot(data):\n",
-    "\n",
-    "    pass\n",
+    "    plt.figure()\n",
     "    \n",
     "# Uncomment below to run the test\n",
     "# ks_plot(stats.norm.rvs(loc=0, scale=3, size=100)) \n",
