--- a/index.ipynb
+++ b/index.ipynb
@@ -190,7 +190,8 @@
     "# You code here \n",
     "\n",
     "def ks_plot(data):\n",
-    "    plt.figure()\n",
+    "    plt.figure(figsize=(15,15))\n",
+    "    \n",
     "    \n",
     "# Uncomment below to run the test\n",
     "# ks_plot(stats.norm.rvs(loc=0, scale=3, size=100)) \n",
