Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,7 @@
     "\n",
     "def ks_plot(data):\n",
     "    plt.figure(figsize=(15,15))\n",
-    "    plt.plot()\n",
+    "    plt.plot(np.sort(data))\n",
     "    \n",
     "# Uncomment below to run the test\n",
     "# ks_plot(stats.norm.rvs(loc=0, scale=3, size=100)) \n",
