--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with plt"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -192,6 +194,7 @@
     "def ks_plot(data):\n",
     "    plt.figure(figsize=(15,15))\n",
     "    plt.plot(np.sort(data), np.linspace(0,1, len(data),endpoint=False))\n",
+    "    \n",
     "    \n",
     "# Uncomment below to run the test\n",
     "# ks_plot(stats.norm.rvs(loc=0, scale=3, size=100)) \n",
