--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
     "def ks_plot(data):\n",
     "    plt.figure(figsize=(15,15))\n",
     "    plt.plot(np.sort(data), np.linspace(0,1, len(data),endpoint=False))\n",
-    "    plt.plo\n",
+    "    plt.plot(np.sort(stats.rv))\n",
     "    \n",
     "# Uncomment below to run the test\n",
     "# ks_plot(stats.norm.rvs(loc=0, scale=3, size=100)) \n",
