--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,7 @@
     "def ks_plot(data):\n",
     "    plt.figure(figsize=(15,15))\n",
     "    plt.plot(np.sort(data), np.linspace(0,1, len(data),endpoint=False))\n",
-    "    plt.plot(np.sort(stats.norm.rvs(loc=0, scale=3, size=len(data))))\n",
+    "    plt.plot(np.sort(stats.norm.rvs(loc=0, scale=3, size=len(data))),np.linspace(0, 1, len(data), endpoint=F))\n",
     "    plt.legend()\n",
     "    plt.show()\n",
     "    \n",
