Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -252,7 +252,8 @@
    ],
    "source": [
     "# Your code here \n",
-    "ks_plot(x)"
+    "ks_plot(x_10)\n",
+    "ks_plot(x_100)\n"
    ]
   },
   {
