Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,7 +272,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comments here \n"
+    "# Your comments here \n",
+    "More samples means more relative similarity between ecdf and cdf."
    ]
   },
   {
