Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
    ],
    "source": [
     "# Perform KS test \n",
-    "scipy.stats.kstest()\n",
+    "scipy.stats.kstest(x_10,)\n",
     "# Your code here \n",
     "\n",
     "for i in [x_10,x_50,x_100,x_1000]:\n",
