Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -352,22 +352,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "KstestResult(statistic=0.025244449633212818, pvalue=0.5469114859681035)\n",
-      "KstestResult(statistic=0.5001459915784039, pvalue=0.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Try with a uniform distubtion\n",
     "x_uni = np.random.rand(1000)\n",
-    "\n",
+    "print(stats.kstest())\n",
     "\n",
     "# KstestResult(statistic=0.025244449633212818, pvalue=0.5469114859681035)\n",
     "# KstestResult(statistic=0.5001459915784039, pvalue=0.0)"
