--- a/index.ipynb
+++ b/index.ipynb
@@ -358,7 +358,7 @@
    "source": [
     "# Try with a uniform distubtion\n",
     "x_uni = np.random.rand(1000)\n",
-    "print(stats.kstest())\n",
+    "print(stats.kstest(x_uni))\n",
     "\n",
     "# KstestResult(statistic=0.025244449633212818, pvalue=0.5469114859681035)\n",
     "# KstestResult(statistic=0.5001459915784039, pvalue=0.0)"
