Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -352,22 +352,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KstestResult(statistic=0.019114140254672222, pvalue=0.8583466530820939)\n"
+      "KstestResult(statistic=0.0216750579899041, pvalue=0.7353409199608226)\n",
+      "KstestResult(statistic=0.5006855375284772, pvalue=0.0)\n"
      ]
     }
    ],
    "source": [
     "# Try with a uniform distubtion\n",
     "x_uni = np.random.rand(1000)\n",
-    "print(stats.kstest(x_uni,'uniform')\n",
-    ")\n",
+    "print(stats.kstest(x_uni,'uniform'))\n",
+    "print(stats.kstest(x_uni, 'norm'))\n",
     "\n",
     "# KstestResult(statistic=0.025244449633212818, pvalue=0.5469114859681035)\n",
     "# KstestResult(statistic=0.5001459915784039, pvalue=0.0)"
