Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -451,7 +451,7 @@
     "    '''\n",
     "    Data entereted must be the same size.\n",
     "    '''\n",
-    "    pass\n",
+    "    plt.\n",
     "\n",
     "# Uncomment below to run\n",
     "# ks_plot_comp(x_100, x_bimodal_100[:,0])"
