Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -452,7 +452,7 @@
     "    Data entereted must be the same size.\n",
     "    '''\n",
     "    plt.figure(figsize=(15,15))\n",
-    "    \n",
+    "    plt.plot(np.sort(data1))\n",
     "\n",
     "# Uncomment below to run\n",
     "# ks_plot_comp(x_100, x_bimodal_100[:,0])"
