--- a/index.ipynb
+++ b/index.ipynb
@@ -453,7 +453,8 @@
     "    '''\n",
     "    plt.figure(figsize=(15,15))\n",
     "    plt.plot(np.sort(data1), np.linspace(0,1,len(data1),endpoint=False))\n",
-    "    plt.plot(np.sort(data2, np.linspace(0, 1, len(data2), endpoint=False)))\n",
+    "    plt.plot(np.sort(data2), np.linspace(0, 1, len(data2), endpoint=False))\n",
+    "    \n",
     "\n",
     "# Uncomment below to run\n",
     "# ks_plot_comp(x_100, x_bimodal_100[:,0])"
