Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -430,18 +430,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'x_bimodal_100' is not defined",
+     "evalue": "name 'x_bi_1000' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-f1d37820f95d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# Uncomment below to run\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mks_plot_2sample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_bimodal_100\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'x_bimodal_100' is not defined"
+      "\u001b[0;32m<ipython-input-23-936f74cf411e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# Uncomment below to run\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mks_plot_2sample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_bi_1000\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'x_bi_1000' is not defined"
      ]
     }
    ],
@@ -459,7 +459,7 @@
     "    plt.show()\n",
     "\n",
     "# Uncomment below to run\n",
-    "ks_plot_2sample(x_100, x_bimodal_100[:,0])"
+    "ks_plot_2sample(x_100, x_bi_1000[:,0])"
    ]
   },
   {
