Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -486,7 +486,7 @@
    "outputs": [],
    "source": [
     "# You rcode here\n",
-    "\n",
+    "stats.ks_2samp(x_100, x-)\n",
     "# Ks_2sampResult(statistic=0.575, pvalue=1.2073337530608254e-14)"
    ]
   },
